# SecureIoT-Sim

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/workflows/: ci.yml
certs/: README.md
docs/: architecture.md
src/: config.h  error.h  key_store.c  key_store.h  main.c  msg_protocol.c  msg_protocol.h  tls_client.c  tls_client.h
tests/: test_key_store.c  test_msg_protocol.c  test_mtls_connection.c  test_tls_client.c
tools/: gen_cert.py
